[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Textures/snake_head.png" type="Texture" id=1]
[ext_resource path="res://Snakev2/SnakeBodySegmentv2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Snakev2/Scripts/SnakeActorV2.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="shootCoolDown" type="Timer" parent="."]
one_shot = true

[node name="Head" parent="." instance=ExtResource( 2 )]
position = Vector2( 44, 4 )
texture = ExtResource( 1 )

[node name="NavObj" type="Node2D" parent="Head"]

[node name="CenterStepRay" type="RayCast2D" parent="Head/NavObj"]
enabled = true
exclude_parent = false
cast_to = Vector2( 100, 0 )
collision_mask = 3
collide_with_areas = true

[node name="RightStepRay" type="RayCast2D" parent="Head/NavObj"]
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 14 )
collision_mask = 3
collide_with_areas = true

[node name="LeftStepRay" type="RayCast2D" parent="Head/NavObj"]
enabled = true
exclude_parent = false
cast_to = Vector2( 0, -14 )
collision_mask = 3
collide_with_areas = true

[node name="Body" type="Node2D" parent="."]

[node name="1" parent="Body" instance=ExtResource( 2 )]
position = Vector2( 36, 4 )

[node name="2" parent="Body" instance=ExtResource( 2 )]
position = Vector2( 28, 4 )

[node name="3" parent="Body" instance=ExtResource( 2 )]
position = Vector2( 20, 4 )

[node name="4" parent="Body" instance=ExtResource( 2 )]
position = Vector2( 12, 4 )

[node name="5" parent="Body" instance=ExtResource( 2 )]
position = Vector2( 4, 4 )
